# nns

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  nns.toml  nockapp.toml  vesl.toml
.github/workflows/: ci.yml  prover-weekly.yml
docs/: ARCHITECTURE.md  Y3_RECURSIVE_PROOF_STATUS.md  claim-note-wallet-support.md  nockchain-fork-for-nns.md  path-y-integration-test-plan.md  running_a_node.md  stateless_nns_tx_primitive_3db35132.plan.md  wallet-verification.md
hoon/app/: app.hoon  names-test.hoon  nns-predicates.hoon  recursive-build.hoon  tracer-parity.hoon  tracer.hoon  tx-witness.hoon
hoon/lib/: nns-accumulator.hoon  nns-predicates.hoon
scripts/: setup-hoon-tree.sh
src/: api.rs  chain.rs  chain_follower.rs  claim_note.rs  formula_nock.rs  kernel.rs  lib.rs  main.rs  noun_access.rs  packed_blob.rs  payment.rs  state.rs  types.rs
tests/: grpcurl_claim_fixture_tx.rs  handlers.rs  nns_predicates.rs  phase2_anchor.rs  phase3_predicates.rs  phase7_light_verify.rs  phase7_two_servers.rs  prover.rs  scan_accumulator_first_writer.rs  scan_block_z_set_tx_order.rs
tests/common/: mod.rs
tests/fixtures/: grpcurl_claim_blob.wire
