[package]
name = "nns"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "nns"
path = "src/main.rs"

[lib]
name = "nns"
path = "src/lib.rs"

[dependencies]
nockapp = { git = "https://github.com/nocktoshi/nockchain.git", branch = "dev", default-features = false, features = ["slog-tracing"] }
nockvm = { git = "https://github.com/nocktoshi/nockchain.git", branch = "dev" }
nockvm_macros = { git = "https://github.com/nocktoshi/nockchain.git", branch = "dev" }
nockapp-grpc = { git = "https://github.com/nocktoshi/nockchain.git", branch = "dev" }
nockchain-types = { git = "https://github.com/nocktoshi/nockchain.git", branch = "dev" }
nockchain-math = { git = "https://github.com/nocktoshi/nockchain.git", branch = "dev" }
noun-serde = { git = "https://github.com/nocktoshi/nockchain.git", branch = "dev" }
zkvm-jetpack = { git = "https://github.com/nocktoshi/nockchain.git", branch = "dev" }
vesl-core = { git = "https://github.com/nocktoshi/vesl-core.git", branch = "dev" }
nock-noun-rs = { git = "https://github.com/nocktoshi/vesl-core.git", branch = "dev" }
nockchain-tip5-rs = { git = "https://github.com/nocktoshi/vesl-core.git", branch = "dev" }
nockchain-client-rs = { git = "https://github.com/nocktoshi/vesl-core.git", branch = "dev" }

tokio = { version = "1.32", features = ["rt-multi-thread", "macros", "sync", "signal"] }
tonic = { version = "0.14", features = ["tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
anyhow = "1.0"
thiserror = "1.0"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.32", features = ["rt-multi-thread", "macros", "test-util"] }
tower = { version = "0.4", features = ["util"] }
tempfile = "3"
base64 = "0.22"
